# yd

./: .gitignore  mypy.ini  pyproject.toml
yd/: __main__.py  app.py  settings.py
yd/core/: __init__.py  audio.py  video.py
yd/routers/: __init__.py  audio.py  video.py
