[tool.poetry]
name = "yd"
version = "0.1.0"
description = "Download YouTube videos with a single click."
authors = ["int <int@addictedto.coffee>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
mypy = "^1.5.1"
black = "^23.7.0"
taskipy = "^1.12.0"

[tool.taskipy.tasks]
start = "python -m yd"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
